v1.91 release; increase ui-dialog z-index to avoid overlaps; ensure INBOX is first folder listed; remove jquery-selectable which caused email open failures
git-svn-id: https://plugins.svn.wordpress.org/mailcwp/trunk@1053012 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/mailcwp.css
+++ b/css/mailcwp.css
@@ -208,3 +208,7 @@ input[id^='mailcwp_from'], input[id^='mailcwp_to'], input[id^='mailcwp_cc'], inp
   width: 100%;
   height: 32px;
 }
+
+.ui-dialog {
+  z-index:100000;
+}
